--- a/assets/index.html
+++ b/assets/index.html
@@ -28,7 +28,7 @@
             <div class="container">
                 <div class="header-line">
                     <div class="header-LOGO">
-                        <img src="./assets/LOGO.png" alt="" />
+                        <img src="LOGO.png" alt="" />
                     </div>
                     <div class="nav">
                         <a class="nav-item" href="#">ГЛАВНАЯ</a>
@@ -74,7 +74,7 @@
                 <div class="cards-holder">
                     <div class="card">
                         <div class="card-image">
-                            <img class="card-image" src="./assets/card.png" />
+                            <img class="card-image" src="card.png" />
                         </div>
                         <div class="card-title">
                             Магическая <span>Атмосфера</span>
@@ -86,7 +86,7 @@
                     </div>
                     <div class="card">
                         <div class="card-image">
-                            <img class="card-image" src="./assets/card.png" />
+                            <img class="card-image" src="card.png" />
                         </div>
                         <div class="card-title">
                             Лучшее качество <span>Еды</span>
@@ -97,7 +97,7 @@
                     </div>
                     <div class="card">
                         <div class="card-image">
-                            <img class="card-image" src="./assets/card.png" />
+                            <img class="card-image" src="card.png" />
                         </div>
                         <div class="card-title">Недорогая <span>Еда</span></div>
                         <div class="card-desc">
@@ -137,9 +137,9 @@
                         </div>
                     </div>
                     <div class="history-images">
-                        <img class="imgages-1" src="./assets/1.jpg" alt="" />
-                        <img class="imgages-2" src="./assets/2.png" alt="" />
-                        <img class="imgages-3" src="./assets/3.png" alt="" />
+                        <img class="imgages-1" src="1.jpg" alt="" />
+                        <img class="imgages-2" src="2.png" alt="" />
+                        <img class="imgages-3" src="3.png" alt="" />
                     </div>
                 </div>
             </div>
@@ -170,26 +170,26 @@
                 <div class="burgers">
                     <div class="burger-item">
                         <div class="burgers-image"></div>
-                        <img src="./assets/pizza.png" class="pizza" />
+                        <img src="pizza.png" class="pizza" />
                     </div>
                     <div class="burger_list">
                         <div class="burger-item">
                             <div class="burger-image"></div>
-                            <img src="./assets/burger.png" class="burger" />
+                            <img src="burger.png" class="burger" />
                             <div class="burger-text">
                                 Гамбургер мини -------------------220 ₽
                             </div>
                         </div>
                         <div class="burger-item">
                             <div class="burger-image"></div>
-                            <img src="./assets/burger.png" class="burger" />
+                            <img src="burger.png" class="burger" />
                             <div class="burger-text">
                                 Гамбургер мини -------------------220 ₽
                             </div>
                         </div>
                         <div class="burger-item">
                             <div class="burger-image"></div>
-                            <img src="./assets/burger.png" class="burger" />
+                            <img src="burger.png" class="burger" />
                             <div class="burger-text">
                                 Гамбургер мини -------------------220 ₽
                             </div>
@@ -205,9 +205,9 @@
                 <div class="menu-items">
                     <div class="menu-item">
                         <div class="menu-image">
-                            <img src="./assets/hotdog.png" class="menu-image" />
+                            <img src="hotdog.png" class="menu-image" />
                             <div class="price">
-                                <img src="./assets/zero.png" class="price-image" />
+                                <img src="zero.png" class="price-image" />
 
                                 <div class="price-420">420</div>
                             </div>
@@ -223,9 +223,9 @@
                     </div>
                     <div class="menu-item">
                         <div class="menu-image">
-                            <img src="./assets/hotdog.png" class="menu-image" />
+                            <img src="hotdog.png" class="menu-image" />
                             <div class="price">
-                                <img src="./assets/zero.png" class="price-image" />
+                                <img src="zero.png" class="price-image" />
 
                                 <div class="price-420">420</div>
                             </div>
@@ -241,9 +241,9 @@
                     </div>
                     <div class="menu-item">
                         <div class="menu-image">
-                            <img src="./assets/hotdog.png" class="menu-image" />
+                            <img src="hotdog.png" class="menu-image" />
                             <div class="price">
-                                <img src="./assets/zero.png" class="price-image" />
+                                <img src="zero.png" class="price-image" />
 
                                 <div class="price-420">420</div>
                             </div>
@@ -270,7 +270,7 @@
                     рубежом, путешествующих в Санкт-Петербург!!!
                 </div>
                 <div class="coment-image">
-                    <img src="./assets/fase.png" class="coment-img" />
+                    <img src="fase.png" class="coment-img" />
                 </div>
                 <div class="coment-type">Посетитель</div>
                 <div class="coment_name">Николай</div>
@@ -283,20 +283,20 @@
                 <div class="galery-content">
                     <div class="galery-left">
                         <div class="galery-up">
-                            <img  class="img-gal"src="./assets/10.png" />
+                            <img  class="img-gal"src="10.png" />
                         </div>
                         <div class="galery-down">
-                            <img class="img-gal"src="./assets/20.png" />
-                            <img class="img-gal"src="./assets/30.png" />
+                            <img class="img-gal"src="20.png" />
+                            <img class="img-gal"src="30.png" />
                         </div>
                     </div>
                     <div class="galery-right">
                         <div class="galery-up">
-                            <img class="img-gal"src="./assets/20.png" />
-                            <img class="img-gal"src="./assets/30.png" />
+                            <img class="img-gal"src="20.png" />
+                            <img class="img-gal"src="30.png" />
                         </div>
                         <div class="galery-down">
-                            <img class="img-gal" src="./assets/10.png" />
+                            <img class="img-gal" src="10.png" />
                         </div>
                     </div>
                 </div>
@@ -306,9 +306,9 @@
             <div class="container">
                 <div class="cook-title">Наши <span>Повара</span></div>
                 <div class="cook_content">
-                    <img src="./assets/40.png" />
-                    <img src="./assets/50.png" />
-                    <img src="./assets/60.png" />
+                    <img src="40.png" />
+                    <img src="50.png" />
+                    <img src="60.png" />
                 </div>
             </div>
         </div>
